# Insanlik-Zinciri

./: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GENESIS_BLOCK.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  normalize_records.py  pyproject.toml  requirements.txt  test_integration.py
.github/: labels.md  pull_request_template.md
docs/: AI_WITNESS_LAYER.md  API_ENTEGRASYONU.md  ARCHITECTURE.md  AUTOMATION.md  GOVERNANCE.md  HC_DIGITAL_FINGERPRINT.md  HC_PROTOCOL.md  STANDARD.md  TRUST_LAYER.md  VERIFICATION_FLOW.md  VIDEO_VERIFICATION.md  append-only-review-chain.md  architecture-roadmap.md  automation-test.md  automation.md  qr-verification.md  record-format.md  release-automation.md  releases.md  reviewer-registry.md  signed-witness-format.md  signed-witness-model.md  timeline.md  trust-layer.md  trust-score.md  trust-scoring.md  v0.1.0-release-notes.md  verification-result-standard.md  verify.md  witness-layer.md
examples/: ai_witness_example.json  api_response_example.json  multi_model_example.json  verification_result_example.json  verify_gateway_response_example.json
halkalar/: 00-meta.md  01-grok.md  02-gemini.md
hash/: HC-CHATGPT-2026-0001.sha256  HC-CHATGPT-2026-0002.sha256  HC-TEST-2026-0001.sha256  README.sha256
hc_trust/: __init__.py  cli.py  hash.py  normalize.py  qr.py
qr/: README.md
schema/: RECORD_SCHEMA.md  record-v1.json  record-v1.schema.json  verification-result-v1.schema.json
src/: normalize_records.py  qr.py  validator.py  verify_hashes.py
tests/: test_api_schema.py  test_result_formatter.py  test_risk_flags.py  (+5 more)
(+20 files in other folders)
